--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -17,9 +17,9 @@ general {
 	col.inactive_border = $inactive_border_col_1 $inactive_border_col_2 $gradient_angle
 	col.nogroup_border = $group_border_col
 	col.nogroup_border_active = $group_border_active_col
-	cursor_inactive_timeout = 30
+#	cursor_inactive_timeout = 30
 	layout = dwindle
-	no_cursor_warps = false
+#	no_cursor_warps = false
 	no_focus_fallback = false
 	apply_sens_to_raw = false
 	resize_on_border = true
@@ -189,12 +189,12 @@ misc {
 	swallow_exception_regex = 
 	focus_on_activate = true
 	no_direct_scanout = false
-	hide_cursor_on_touch = true
+#	hide_cursor_on_touch = true
 	mouse_move_focuses_monitor = true
 	render_ahead_of_time = false
 	render_ahead_safezone = 1
-	cursor_zoom_factor = 1.0
-	cursor_zoom_rigid = false
+#	cursor_zoom_factor = 1.0
+#	cursor_zoom_rigid = false
 	allow_session_lock_restore = false
 	background_color = 0x000000
 	close_special_on_empty = true
